// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel should render a LoadingIndicator if it is loading 1`] = `
<DocumentFragment>
  <div
    class="str-chat messaging light str-chat__channel"
    id="str-chat__channel"
  >
    <div>
      Loading channel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Channel should render default loading indicator if channels query is in progress 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  >
    <div>
      Loading channel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Channel should render empty channel container if channel does not have cid 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  />
</DocumentFragment>
`;

exports[`Channel should render empty channel container if channels query failed 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  />
</DocumentFragment>
`;
